k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-frontend
  labels:
    app: capstone-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-frontend
  template:
    metadata:
      labels:
        app: capstone-frontend
    spec:
      containers:
        - name: capstone-frontend
          image: registry.edwardnafornita.com/capstone-frontend:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-api
  labels:
    app: capstone-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-api
  template:
    metadata:
      labels:
        app: capstone-api
    spec:
      containers:
        - name: capstone-api
          image: registry.edwardnafornita.com/capstone-api:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-ml
  labels:
    app: capstone-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: capstone-ml
  template:
    metadata:
      labels:
        app: capstone-ml
    spec:
      containers:
        - name: capstone-ml
          image: 127.0.0.1:5001/capstone-ml:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
